# file-web-test

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
assets/templates/: images.html  index.html
src/: main.rs  static_serve.rs
src/templates/: images.html
static/: landing-page.js  scripts.js  styles.css
