[package]
name = "file-web"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.12", features = ["macros"] }
hyper = "0.14.25"
lazy_static = "1.4.0"
mime_guess = "2.0.4"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
tera = { version = "1.18.1", default-features = false}
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "io-util", "mio"] }
tokio-util = { version = "0.7.7", features = ["io"] }
